--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -17,7 +17,7 @@ heading:
   subtitle: Membership Tribe
   description: >-
     Connecting women around the world in shared experiences of feminine
-    embodiment.
+    embodiment
   button-enroll:
     text: Join now
     url: https://liberationthroughmovement.mn.co
@@ -42,83 +42,12 @@ video:
 course-description:
   heading: Discover Liberation Through Movement
   description_html: >-
-    Humans are social creatures, we need each other. When we come together in
-    community and shared passion, we help give each other the support,
-    inspiration, and strength needed to align with our true nature, our
-    radiance, and our ability to thrive.
-     
-    As women, it is our time to rise together. To remind each other that we are
-    not alone in our journey. That we are worthy to be living lives filled with
-    joy and unwavering peace. And that we can experience the growth we desire
-    through creativity and pleasure- the feminine way.
-
-    ​
-
-    ​
-
-    ​
-
-    ​
-
-    ​
-
-    ​
-
-    LIBERATION THROUGH MOVEMENT IS AN ONLINE GLOBAL TRIBE FOR WOMEN
-
-    WHO ARE READY TO:
-
-    ​
-
-    Let go of the need to push to find their place and worth in the world
-
-    Gain the knowledge needed to realign with their feminine way of expansion
-
-    Learn new embodiment practices and participate in unique life-changing
-    experiences
-
-    Awaken and celebrate their feminine expressions - finding safety and
-    pleasure in feeling
-
-    Be supported by women all over the world, held in a container of safety and
-    permission
-
-    ​
-
-    ​
-
-    ​
-
-    As a member of this tribe, you will have exclusive access to weekly
-    embodiment events & workshops curated by world class facilitators. You will
-    connect with hundreds of women around the globe through these powerful
-    shared experiences, and remember at every moment that you  are not alone. We
-    are here for you, dancing beside you, celebrating you along your journey.
-     
-    So are you ready to spread your wings?
-
-    Are you ready for your next evolution of embodied liberation?
-
-    ​
-
-    THIS IS YOUR TRIBE, LADIES. Welcome Home.
-  module:
-    - image_path: /uploads/icons/manamei-7.png
-      title: The Need
-      description_html: >-
-        <p>There are so many uncertainties that make life feel challenging, too
-        hard, and can leave you feeling unsafe, out of energy and
-        uninspired.</p>
-    - image_path: /uploads/icons/manamei-5.png
-      title: The Tribe
-      description_html: >-
-        <p>Realign with the beautiful, feminine flow of life that you
-        deserve.</p>
-    - image_path: /uploads/icons/manamei-6.png
-      title: The Offering
-      description_html: >-
-        <p>Cultivate life-long deep and authentic connections with sisters all
-        around the world.</p>
+    Liberation through movement is an online global tribe for women who are ready to:</p>
+    <ul><li class="mb-2">✓  Let go of the need to push to find their place and worth in the world.</li><li class="mb-2">✓ Gain the knowledge needed to realign with their feminine way of expansion.</li><li class="mb-2">✓ Learn new embodiment practices and participate in unique life-changing experiences.</li><li class="mb-2">✓ Awaken and celebrate their feminine expressions - finding safety and
+    pleasure in feeling.</li><li class="mb-2">✓ Be supported by women all over the world, held in a container of safety and
+    permission.</li></ul><p>As a member of this tribe, you will have exclusive access to weekly
+    embodiment events & workshops curated by world class facilitators. You will connect with hundreds of women around the globe through these powerful shared experiences, and remember at every moment that you  are not alone. We
+    are here for you, dancing beside you, celebrating you along your journey.</p><p>So are you ready to spread your wings?<br>Are you ready for your next evolution of embodied liberation?</p><p>THIS IS YOUR TRIBE, LADIES. <span class="text-sm-serif">Welcome Home.</span>
 who-its-for:
   heading: Who the Liberation Through Movement is for
   description_html: >-
@@ -273,7 +202,7 @@ seo:
 {% include video.html %}
 
 <!-- Course Description -->
-{% include description-course.html %}
+{% include description-ltm.html %}
 
 <!-- Who It's For -->
 {% include who-its-for.html %}
