--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -43,8 +43,8 @@ course-description:
   heading: Discover Liberation Through Movement
   description_html: >-
     Liberation through movement is an online global tribe for women who are ready to:</p>
-    <ul><li class="mb-2">✓  Let go of the need to push to find their place and worth in the world.</li><li class="mb-2">✓ Gain the knowledge needed to realign with their feminine way of expansion.</li><li class="mb-2">✓ Learn new embodiment practices and participate in unique life-changing experiences.</li><li class="mb-2">✓ Awaken and celebrate their feminine expressions - finding safety and
-    pleasure in feeling.</li><li class="mb-2">✓ Be supported by women all over the world, held in a container of safety and
+    <ul><li class="mb-2"><span><strong>&#183;</strong> </span> Let go of the need to push to find their place and worth in the world.</li><li class="mb-2"><span><strong>&#183;</strong> </span>Gain the knowledge needed to realign with their feminine way of expansion.</li><li class="mb-2"><span><strong>&#183;</strong> </span>Learn new embodiment practices and participate in unique life-changing experiences.</li><li class="mb-2"><span><strong>&#183;</strong> </span>Awaken and celebrate their feminine expressions - finding safety and
+    pleasure in feeling.</li><li class="mb-2"><span><strong>&#183;</strong> </span>Be supported by women all over the world, held in a container of safety and
     permission.</li></ul><p>As a member of this tribe, you will have exclusive access to weekly
     embodiment events & workshops curated by world class facilitators. You will connect with hundreds of women around the globe through these powerful shared experiences, and remember at every moment that you  are not alone. We
     are here for you, dancing beside you, celebrating you along your journey.</p><p>So are you ready to spread your wings?<br>Are you ready for your next evolution of embodied liberation?</p><p>THIS IS YOUR TRIBE, LADIES. <span class="text-sm-serif">Welcome Home.</span>
