Updated 1 file via CloudCannon.

--- a/mana-movement.html
+++ b/mana-movement.html
@@ -21,59 +21,41 @@ heading:
   background_image: /uploads/images/manamei-27.jpg
 banner:
   - image_path: /uploads/icons/manamei-19.png
-    title: Calm
+    title: Mind
     benefit: Quiet your Mind and Cultivate Inner Peace
   - image_path: /uploads/icons/manamei-20.png
-    title: Expression
+    title: Body
     benefit: Reconnect with your Body and Increase Fluidity
   - image_path: /uploads/icons/manamei-21.png
-    title: Awaken
-    benefit: Awaken Your Spirit and Activate your Creativity
+    title: Spirit
+    benefit: 'Awaken Your Spirit and Activate your Creativity '
 video:
-  show: false
+  show: true
   url:
 course-description:
   heading: Discover the essence of Mana Movement Foundations
-  description: >-
-    MANA Movement is a modality of movement that is focused on activating the
-    non-linear pathways of energy and of physical movement through the body.
-    These pathways are circles, spirals, and waves. These are also called the
-    Feminine Pathways of Movement.
-
-
-    The purpose of this practice is to bring our physical body and our energy
-    body back into balance- where we hold a harmonious balance between the
-    Masculine and the Feminine. The Masculine movement is linear, the feminine
-    movement is non-linear. Because we live in a world where we primarily move
-    and function from the Masculine, it is important for us to take the time to
-    activate the Feminine in order to come back into harmonious balance.
-
-
-    When we activate these Feminine pathways of movement through the body, we
-    allow the natural flow of life force energy to move through us without
-    restriction. This will allow us to access more creativity, more pleasure,
-    more inspiration, more joy.
-
-
-    It also allows us to meet life’s challenges with more peace and with more
-    grace. It increases our capacity to, literally, flow with life. This will
-    bring more ease into every single aspect of your life. 
-
-
-    Through this practice, by simply focusing on bringing these circles and
-    spirals and waves into every single part of your body, this will in turn
-    benefit the way you move through life and the way you meet life in every
-    single moment. 
+  description:
   module:
     - image_path: ''
-      title:
-      description_html: ''
+      title: Meditation - Mind
+      description_html: >-
+        <p>Drop into peaceful presence with the NOW.</p><p>Bring the mind into
+        harmony with the body.</p><p>Learn to slow thoughts and calm the
+        mind.</p><p>Practice sustained intentional focus.</p><p>Take back
+        control of your thoughts &amp; actions.</p>
     - image_path: ''
-      title:
-      description_html: ''
+      title: Activation - Body
+      description_html: >-
+        <p>Awaken every layer of the physical body.</p><p>Stretch and strengthen
+        muscles.</p><p>Increase joint mobility.</p><p>Release blockages and
+        stagnation.</p><p>Expand flexibility and fluidity.</p>
     - image_path: ''
-      title:
-      description_html: ''
+      title: Liberation - Spirit
+      description_html: >-
+        <p>Open energy channels through the body.</p><p>Realign with
+        unrestricted life force energy flow.</p><p>Awaken creativity and
+        inspiration.</p><p>Activate embodied pleasure and power.</p><p>Reclaim
+        authenticity and radiance.</p>
 who-its-for:
   heading: Who Mana Movement Foundations is for
   description_html: >-
@@ -81,7 +63,7 @@ who-its-for:
     creative potential by accessing the well of life force energy flowing
     within.</li><li>Realign with a life filled with inspiration, beauty,
     pleasure, and flow.</li><li>Establish an unwavering sense of peace and
-    safety within, no matter what is happening in the world around</li><li>Rise
+    safety within, no matter what is happening in the world around.</li><li>Rise
     into their full embodied power and live a life of liberated personal
     expression.</li><li>Cultivate deeper self love, confidence, and
     worthiness.</li><li>Become more comfortable dancing and moving their body
@@ -95,7 +77,7 @@ who-its-for:
 inside-the-course:
   heading: Inside Mana Movement Foundations
   description_html: >-
-    <p>In this course, Mana Mei, founder of Liberation Through Movement- an
+    <p>In this course, Mana Mei, founder of Liberation Through Movement - an
     international business focused on empowering women through embodied
     movement, will guide you through her signature life-changing movement
     meditation practice, MANA Movement. Through this practice, you will
@@ -174,7 +156,7 @@ testimonials:
     - testimonial: “One class and I cant wait for a million more!”
       author:
 instructor:
-  show: false
+  show: true
 investment:
   heading: Investment
   includes:
@@ -247,7 +229,7 @@ faq:
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta:
-  heading: Something greater
+  heading: The perfect daily practice
   description_html: >-
     <p>Within each of us exists a vast and wonderous landscape of beauty and
     creative potential. By enrolling now, you can reclaim your role as the
@@ -257,16 +239,15 @@ cta:
     url: >-
       https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
   background-image:
-    background_image: /uploads/images/manamei-22.jpg
+    background_image: /uploads/images/manamei-44.jpg
     background-position: center
 seo:
-  title:
+  title: Mana Movement Foundations
   description:
   keywords:
   social_image:
   hide-from-google: false
 ---
-
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
 
