Updated 2 files via CloudCannon.

--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -1,7 +1,7 @@
 ---
 layout: program
-slug: mana-movement
-title: Mana Movement
+slug: mana-movement-foundations
+title: Mana Movement Foundations
 description_html: >-
   <p>Mana Movement Foundations is a powerful introductory course to the
   life-changing MANA Movement Practice.</p>
@@ -31,7 +31,7 @@ banner:
     benefit: 'Awaken Your Spirit and Activate your Creativity '
 video:
   show: true
-  url: https://youtu.be/5sEVM981_X0?
+  url:
 course-description:
   heading: Discover the essence of Mana Movement Foundations
   description:
