--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -34,7 +34,50 @@ video:
   url:
 course-description:
   heading: Discover the essence of Mana Movement Foundations
-  description:
+  description: >-
+    MANA Movement is a modality of movement that is focused on activating the
+    non-linear pathways of energy and of physical movement through the body.
+    These pathways are circles, spirals, and waves. These are also called the
+    Feminine Pathways of Movement.
+
+    The purpose of this practice is to bring our physical body and our energy
+    body back into balance- where we hold a harmonious balance between the
+    Masculine and the Feminine. The Masculine movement is linear, the feminine
+    movement is non-linear. Because we live in a world where we primarily move
+    and function from the Masculine, it is important for us to take the time to
+    activate the Feminine in order to come back into harmonious balance.
+
+    When we activate these Feminine pathways of movement through the body, we
+    allow the natural flow of life force energy to move through us without
+    restriction. This will allow us to access more creativity, more pleasure,
+    more inspiration, more joy.
+
+    It also allows us to meet life’s challenges with more peace and with more
+    grace. It increases our capacity to, literally, flow with life. This will
+    bring more ease into every single aspect of your life. 
+
+    Through this practice, by simply focusing on bringing these circles and
+    spirals and waves into every single part of your body, this will in turn
+    benefit the way you move through life and the way you meet life in every
+    single moment. 
+
+
+
+    By practicing MANA Movement, you will:
+
+    - activate the mind-body-spirit harmony for holistic wellbeing
+
+    - reconnect with your physical body, energy body, and your ability to meet
+    the world in authenticity 
+
+    - explore your unique creative expression and transmute emotions into art
+
+    - gain an invaluable tool to integrate into your daily selfcare and personal
+    embodiment regimen to make sure you meet every day from a place of peace and
+    power
+
+    - establish an unwavering anchor, feeling of safety, as well as a sense of
+    expansion and freedom in every moment of your life.
   module:
     - image_path: ''
       title: Meditation - Mind
