--- a/mana-movement-foundations.html
+++ b/mana-movement-foundations.html
@@ -35,6 +35,7 @@ video:
 course-description:
   heading: Discover the essence of Mana Movement Foundations
   description_html:
+  benefits_html:
   module:
     - image_path: ''
       title: Meditation - Mind
