--- a/mana-movement.html
+++ b/mana-movement.html
@@ -7,124 +7,108 @@ description_html: >-
   life-changing MANA Movement Practice.</p>
 featured-image: /uploads/images/manamei-27.jpg
 heading:
-  title: MANA Movement Foundations
-  subtitle: Realign with the Natural Feminine Way
-  description: A powerful introductory course to the life-changing MANA Movement Practice
+  title: MANA Ritual Movement
+  subtitle: Initiation into the Art of Feminine Embodiment
+  description: Return to the feminine paths of movement
   button-enroll:
     text: Enroll now
-    url: >-
-      https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+    url: https://sso.teachable.com/secure/487916/checkout/3804105/mana-movement
   button-video:
-    show: true
+    show: false
     text: Watch the video
-    url: https://youtu.be/5sEVM981_X0?
-  background_image: /uploads/images/manamei-27.jpg
-banner:
-  - image_path: /uploads/icons/manamei-19.png
-    title: Mind
-    benefit: Quiet your Mind and Cultivate Inner Peace
-  - image_path: /uploads/icons/manamei-20.png
-    title: Body
-    benefit: Reconnect with your Body and Increase Fluidity
-  - image_path: /uploads/icons/manamei-21.png
-    title: Spirit
-    benefit: 'Awaken Your Spirit and Activate your Creativity '
-video:
-  show: true
-  url: https://youtu.be/5sEVM981_X0?
+    url: 
+  background_image: /uploads/images/manamei-30.jpg
 course-description:
-  heading: Discover the essence of Mana Movement Foundations
-  description:
-  module:
-    - image_path: ''
-      title: Meditation - Mind
-      description_html: >-
-        <p>Drop into peaceful presence with the NOW.</p><p>Bring the mind into
-        harmony with the body.</p><p>Learn to slow thoughts and calm the
-        mind.</p><p>Practice sustained intentional focus.</p><p>Take back
-        control of your thoughts &amp; actions.</p>
-    - image_path: ''
-      title: Activation - Body
-      description_html: >-
-        <p>Awaken every layer of the physical body.</p><p>Stretch and strengthen
-        muscles.</p><p>Increase joint mobility.</p><p>Release blockages and
-        stagnation.</p><p>Expand flexibility and fluidity.</p>
-    - image_path: ''
-      title: Liberation - Spirit
-      description_html: >-
-        <p>Open energy channels through the body.</p><p>Realign with
-        unrestricted life force energy flow.</p><p>Awaken creativity and
-        inspiration.</p><p>Activate embodied pleasure and power.</p><p>Reclaim
-        authenticity and radiance.</p>
+  heading: Discover the essence of Mana Movement
+  description_html: >-
+    <p>For centuries, cultures around the world have used dance as a way to pray, celebrate, express, and connect. When the energy that naturally moves through the body is expressed through intentional movement, it has the capacity to reconnect us with our own Source energy and power of manifestation.</p><p>This is a practice that, in mainstream culture has been lost.</p><p>We have become disconnected from the wisdom that we each innately hold in our bodies. We have become disconnected from the knowledge of how to use dance to pray, call in, and manifest what we desire in life.</p><p>But just because we have drifted away from these practices does not mean they have been lost forever!</p><p>This knowledge still lives inside each of us, waiting to be reactivated and used for its purpose- to bring us into align with our highest expression of life.</p><p>Using movement as a ritual practice can be done by absolutely anyone. There is no skill required. The only element necessary is a willingness to open to the unseen realm of energy, and to prioritize creating time and space to be fully present with your self, your feeling body, and all of the vibrations flowing through you.</p><p>Once we learn to tap into the river of energy flowing inside, welcoming it in every form- from the most gentle drips to the 10 foot high crashing waves- then we can learn to harness this power, activate it, and direct it through the body in a way that supports us stepping more fully into our power.</p><p>We become the masters of our reality, knowing that what is outside is a direct reflection of that is happening on the inside.</p>
 who-its-for:
   heading: Who Mana Movement Foundations is for
   description_html: >-
-    <p>This course is for anyone who is ready to:</p><ul><li>Unlock their full
-    creative potential by accessing the well of life force energy flowing
-    within.</li><li>Realign with a life filled with inspiration, beauty,
-    pleasure, and flow.</li><li>Establish an unwavering sense of peace and
-    safety within, no matter what is happening in the world around.</li><li>Rise
-    into their full embodied power and live a life of liberated personal
-    expression.</li><li>Cultivate deeper self love, confidence, and
-    worthiness.</li><li>Become more comfortable dancing and moving their body
-    freely.</li><li>Gain more fluidity, mobility, and awareness of their body in
-    motion.</li><li>Learn a modality of practice that covers all three aspects
-    of holistic healing: mindfulness meditation, physical body activation,
-    spiritual liberation.</li></ul>
+    <p>MANA Movement is a course designed to suit all women, no matter what your experience or skill level with other movement practices is.</p><p>In fact, this course has been designed for any woman who is ready to awaken more of their feminine expression.</p><p>Who is ready to feel more expansive, radiant, passionate, and in love with themselves and their life!</p>
   background-image:
-    background_image: /uploads/images/manamei-21.jpg
+    background_image: /uploads/images/manamei-19.jpg
     image_focus: center
 inside-the-course:
-  heading: Inside Mana Movement Foundations
+  heading: Inside Mana Movement
   description_html: >-
-    <p>In this course, Mana Mei, founder of Liberation Through Movement - an
-    international business focused on empowering women through embodied
-    movement, will guide you through her signature life-changing movement
-    meditation practice, MANA Movement. Through this practice, you will
-    cultivate deep interoception (feeling body awareness) and learn to transmute
-    all emotions through the physical body, helping you to regain agency over
-    your life and ability to thrive.</p><p>In this Foundational MANA Movement
-    course, you will gain access to TWO full length practices which will bring
-    you into deep communion with your entire body, both physically and
-    energetically.</p><p>Through the consistent practice of MANA Movement, you
-    will strengthen your connection to self and cultivate an unwavering inner
-    sanctuary filled with a sense of peace, safety, expansion, and
-    freedom.</p><p>Each module includes a video introduction to explain the
-    structure and concept of the practice, plus the full length video guided
-    practice.&nbsp;</p>
+    <p>You have the flexibility to incorporate this program into your daily life. You may choose to engage with these modules every day or practice whenever inspiration strikes. The course is structured with 6 core modules and 4 supplementary modules. Each of the initial six modules delves into the intricacies of a segment within the Mana Movement Practice. Module 6 represents the comprehensive Mana Movement practice. The preceding five modules systematically break down each section. By progressing step by step, you can learn and embody these practices. By the time you reach Module 6, you will have already internalized all these movements, enabling a more profound exploration.</p><p>For optimal results, it is recommended to complete each module two to three times before advancing to the next one. This is your opportunity to fully embody these practices, allowing you to perform them effortlessly and immerse yourself in your unique experience. Upon completing the program, the aim is for you to autonomously practice without relying on the videos, as you will have developed a profound familiarity with the movements within your body.</p>
   module:
-    - title: Module 1
+    - title: Module 1, Embodied Arm Art
       description_html: >-
-        <p>The first practice will take you through a thorough exploration of
-        the foundational seated MANA Movement practice, focused on activating
-        the central channel of the body from root to crown, through the spine,
-        as well as opening the channels through the arms. You will be introduced
-        to the breath-body connection and conscious breathing patterns used
-        throughout the practice. You will also have moments to dive into your
-        free movement exploration, discovering your own unique way of moving in
-        circles, spirals, and waves.&nbsp;</p>
+        <p>PDF download, video lesson, video practice</p>
       time:
-        show: false
-        hours: 1
-        minutes: 16
-    - title: Module 2
+        show: true
+        hours: 00
+        minutes: 24
+    - title: Module 2, Activating the Spinal Spiral
       description_html: >-
-        <p>The second practice is an evolution of practice one. In this
-        practice, you will travel through all four body positions, moving from
-        seated all the way to standing, and activating the Feminine Pathways
-        through all channels of the body. You will conclude the practice with a
-        full body free movement exploration to activate your authentic
-        expression and allow the transmutation and expression of your luscious
-        inner landscape.</p>
+        <p>PDF download, video lesson, video practice</p>
       time:
-        show: false
-        hours: 1
-        minutes: 16
+        show: true
+        hours: 00
+        minutes: 34
+    - title: Module 3, The Animal Body
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 31
+    - title: Module 4, Kneeling to the Earth
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 28
+    - title: Module 5, Bridging Earth & Sky
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 38
+    - title: Module 6, Complete Mana Movement Practice
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 57
+    - title: Module 7, Elemental Flow - Soften
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 6
+    - title: Module 8, Elemental Flow - Strengthen
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 5
+    - title: Module 9, Elemental Flow - Release
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 8
+    - title: Module 10, Elemental Flow - Liberate
+      description_html: >-
+        <p>PDF download, video lesson, video practice</p>
+      time:
+        show: true
+        hours: 00
+        minutes: 8
   background-image:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials:
-  background_image: /uploads/images/manamei-20.jpg
+  background_image: /uploads/images/manamei-11.jpg
   testimonials:
     - testimonial: ”I love it!! I've been searching for this movement my whole life.”
       author:
@@ -162,18 +146,21 @@ investment:
   includes:
     heading: What's included
     list:
-      - list-item: 2 guided video practices
+      - list-item: 10 guided video practices
       - list-item: Written theory and journaling prompts
       - list-item: Lifetime access to program materials
       - list-item: Access to the private Mana Movement Facebook group
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $20
+      price: $180
     payment-plan:
-      show: false
+      show: true
       heading: Payment plan
-      price:
+      price: $100 x 2 months
+  button: 
+    text: Enroll Now
+    url: https://manamei.teachable.com/p/mana-movement-sales
 faq:
   heading: Frequently asked questions
   questions-and-answers:
@@ -229,17 +216,15 @@ faq:
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta:
-  heading: The perfect daily practice
+  heading: Initiation into the art of feminine embodiment 
   description_html: >-
-    <p>Within each of us exists a vast and wonderous landscape of beauty and
-    creative potential. By enrolling now, you can reclaim your role as the
-    master creator of your life and realign with the life you desire.</p>
+    <p>This is the perfect place to start your journey into full embodied liberation.</p><p>Throughout this course, you will be introduced to the Essential component of the MANA Movement Practice.</p><p>Each section of the practice is composed of simple, easy to follow movement patterns and exercises that will open the door into the vast world of intentional and intuitive dance as an every day ritual.</p><p>MANA Movement is focused on returning to the natural feminine paths of movement- circles, spirals, and waves. By returning to these innate movement patterns, we reestablish the natural, easy flow of energy through the body.</p><p>You will gain clarity, peace, and a renewed sense of inspiration.</p>
   button:
     text: Enroll now
     url: >-
-      https://sso.teachable.com/secure/487916/checkout/4871108/mana-movement-foundations
+      https://manamei.teachable.com/p/mana-movement-sales
   background-image:
-    background_image: /uploads/images/manamei-44.jpg
+    background_image: /uploads/images/manamei-36.jpg
     background-position: center
 seo:
   title: Mana Movement Foundations
@@ -250,14 +235,6 @@ seo:
 ---
 <!-- Course Heading -->
 {% include hero-banner-course.html %}
-
-<!-- Banner -->
-{% include banner-course.html %}
-
-<!-- Video -->
-{% if page.video.show == true %}
-{% include video.html %}
-{% endif %}
 
 <!-- Course Description -->
 {% include description-course.html %}
